--- a/openJDK.yaml
+++ b/openJDK.yaml
@@ -1,15 +1,19 @@
 ---
 - hosts: all
   become: yes
+  vars:
+    ubuntujavapackg: "openjdk-8-jre"
+    redhatinstall: "java-1.8.0-openjdk"
+
   tasks:
     - name: Install openjdk-8 on ubuntu
       apt:
-        name: openjdk-8-jre
+        name: "{{ubuntujavapackg}}"
         state: present
       when: ansible_os_family == "Debian"
 
     - name: Install openjdk-8 on redhat
       yum:
-        name: java-1.8.0-openjdk
+        name: "{{redhatinstall}}"
         state: present
       when: ansible_os_family == "RedHat"
